tests/base/parser/bad/type_t-tid-arrow-with.scilla
scilla_version 0

library TestLib

(* should be 'Bool' *)

let f : Uint128 -> bool
